Fix for rounded corners on small screens
Conflict between border-radius and padding

--- a/css/layouts/_case-study.scss
+++ b/css/layouts/_case-study.scss
@@ -139,16 +139,12 @@ ul.hero-sidebar-list {
   @include media(min-width em(480) max-width em(767.9)) {
     @include span-columns(10);
     @include shift(1);
-    padding-left: 1em;
-    padding-right: 1em;
   }
 
   //Responsive small screen
   @include media(max-width em(479.9)) {
-    @include span-columns(12);
-    @include shift(0);
-    padding-left: 1em;
-    padding-right: 1em;
+    @include span-columns(11);
+    @include shift(0.5);
   }
 
 }
@@ -210,6 +206,9 @@ ul.hero-sidebar-list {
 
 }
 
+.rounded {
+  border-radius: $base-border-radius;
+}
 
 //More Work
 .more-work-item {
@@ -241,10 +240,6 @@ ul.hero-sidebar-list {
     padding-left: 1em;
     padding-right: 1em;
   }
-}
-
-.rounded {
-  border-radius: $base-border-radius;
 }
 
 .more-work-text {
